# code-insight

./: .gitignore  Cargo.toml  LICENSE  README.md  debug_parser.rs  debug_test.rs  test_index_debug.rs  test_invalid.java  test_parser_behavior.rs
doc/: README.md  detailed-class-structure.mmd  uml-architecture.mmd
examples/: README.md
examples/simple-project/: pom.xml  run-examples.sh
examples/simple-project/src/main/java/com/example/: User.java  UserRepository.java  UserService.java
examples/simple-project/src/main/java/com/example/controller/: UserController.java
examples/simple-project/src/main/java/com/example/dto/: UserCreateRequest.java  UserResponse.java  UserUpdateRequest.java
examples/simple-project/src/main/java/com/example/entity/: BaseEntity.java  EnhancedUser.java
examples/simple-project/src/main/java/com/example/repository/: UserRepositoryImpl.java
examples/step-by-step/: tutorial-01-basics.sh
src/: lib.rs  type_config.rs  types.rs
src/async/: mod.rs
src/cli/: mod.rs
src/graph/: mod.rs  visualization.rs
src/indexer/: mod.rs
src/llm/: mod.rs
src/maven/: dependency.rs  mod.rs  parser.rs
src/parser/: java.rs  java_structure.rs  mod.rs  properties.rs  xml.rs
src/query/: mod.rs
tests/: integration_test.rs  integration_test_parse.rs  parser_edge_cases_test.rs
