[package]
name = "code-insight"
version = "0.1.0"
edition = "2024"
authors = ["Code Insight Team"]
description = "A tool for parsing and analyzing Java projects"
license = "MIT"

[[bin]]
name = "code-insight"
path = "src/bin/main.rs"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }

# Tree-sitter for parsing
tree-sitter = "0.20"
tree-sitter-java = "0.20"

# Tantivy for indexing and search
tantivy = "0.22"

# CLI and TUI
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"

# File system and path handling
walkdir = "2.4"
ignore = "0.4"
pathdiff = "0.2"



# Async runtime and utilities
futures = "0.3"
async-trait = "0.1"
rayon = "1.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
regex = "1.10"
glob = "0.3"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"